--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 head{
     margin: 0px; 
-    border: Opx;
+    border: 0px;
 }
 body{
     margin: 0px; 
@@ -9,11 +9,19 @@ body{
 }
 .slider {
     -webkit-appearance: none;
-    width: 100%;
+    width: 90%;
     height: 25px;
     background: #d3d3d3;
     outline: none;
     opacity: 0.7;
     -webkit-transition: .2s;
     transition: opacity .2s;
+    display:table-cell;
+    float:left;
+}
+
+p{
+    margin: 0px;
+    border: 0px;
+    font-size: 25px;
 }
